ajuste de cores

--- a/src/styles/GlobalStyles.scss
+++ b/src/styles/GlobalStyles.scss
@@ -14,6 +14,9 @@
   --green: #33CC95;
   --background: #F0F2F5;
   --shape: #FFFFFF;
+  --roxo:#835afd;
+  --black:#1e1e1e;
+  --gray:#a8a8b3
 
 }
   html{
