--- a/src/styles/buttonAddModal.scss
+++ b/src/styles/buttonAddModal.scss
@@ -13,7 +13,7 @@
     border-radius: 4px;
     font-weight: bold;
     background: #5232b4;
-    color: #FFF;
+    color: var(--shape);
     padding: 0 32px;
     border: 0;
     display: flex;
