--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -3,8 +3,8 @@
   height:50px;
   border-radius: 4px;
   font-weight: 500;
-  background: #835afd;
-  color: #FFF;
+  background: var(--roxo);
+  color: var(--shape);
   padding: 0 32px;
   border: 0;
   display: flex;
@@ -18,9 +18,9 @@
     margin-right: 8px;
   }
   &.outlined{
-    background: #FFF;
-    border: 1px solid #835afd;
-    color: #835afd;
+    background: var(--shape);
+    border: 1px solid var(--roxo);
+    color: var(--roxo);
     
 
   }
