--- a/src/styles/formModal.scss
+++ b/src/styles/formModal.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   #content{
-    background: #ffffff;
+    background: var(--shape);
     width: 100%;
     height: 100%;
     max-width: 400px;
@@ -26,7 +26,7 @@
       align-items: center;
       width: 100%;
       height: 40px;
-      color: #1e1e1e;
+      color: var(--black);
       background-color: transparent;
       font-size: 1.1rem;
       button {
@@ -60,7 +60,7 @@
         input {
           margin: 10px 0;
           border: none;
-          color: #1e1e1e;
+          color: var(--black);
           background-color: #f5f5f5;
           border-radius: 5px;
           height: 50px;
@@ -79,8 +79,8 @@
         justify-content: center;
         align-items: center;
         align-self: center;
-        background: limegreen;
-        color: white;
+        background: var(--green);
+        color: var(--shape);
         border: none;
         border-radius: 6px;
         height: 45px;
