--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,9 +4,9 @@
     padding: 18px 24px;
     justify-content:space-between;
     align-items:center;
-    background: #835afd;
+    background: var(--roxo);
     h2{
-      color: #fff;
+      color: var(--shape);
       font-family: 'Poppins', sans-serif;
     
     }
@@ -17,7 +17,7 @@
       strong{
         margin-left: 4px;
         font-size: 12px; 
-        color: #fff;
+        color: var(--shape);
         font-family:  sans-serif;
         margin-right: 25px;
       }
